# trajectory_planner

./: .gitignore  ActionMonitor.py  CMakeLists.txt  GraspUtil.py  HaoUtil.py  ManipUtil.py  OWDUtil.py  TSRPose.py  TSRUtil.py  adjust_message_robot_server.py  arm_project_test.py  barrett_manager.py  blind_grasp.py  dither_test.py  ft_manager.py  grasp_analyzer.py  grasp_message_robot_server.py  grasp_message_server_tests.py  local_geometry_explore_server.py  mainpage.dox  manifest.xml  manual_control.py  model_rec_manager.py  object_filename_dict.py  package.xml  pose_conversions.py  setup.py  staubli_manager.py  staubli_or_interface.py  test_object_grasps.py  trajectory_planner.py
launch/: automatic_control.launch  manual_control.launch
models/: staubli.robot.xml  staubli.xacro  staubli2.xarco  zeroplane.iv
util/: RotMat2AxisAngle.py  TSR.py  TransformMatrix.py  mydot.py  rodrigues.py  str2num.py
